--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,17 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+      integrity="sha384-Tt3Qi0FnItvR6fzDlnVQGx1rztw3Nf/KHysrZt4sdP4WMMx0fGUo4VJxY+/fK+ip"
+      crossorigin=""
+    />
+    <script
+      src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+      integrity="sha384-IMn7ja7EBnLLq+EJ8SkCJLDa6CxpK/4wswyyhIkD3fJiXzTn3Cuh1omOZn13J0+M"
+      crossorigin=""
+    ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
