title description for shoffline

--- a/public/index.html
+++ b/public/index.html
@@ -18,11 +18,14 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Dhande se bada koi dharm nahi hota"
+      content="At shoffline, with the aim of see online shop offline, you can search any
+    product at a walking distance, which will reduce your in-store shopping
+    time and we guarantee to show the product with best quality, price and
+    reach of your interest"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Dhanda Paani</title>
+    <title>Shoffline | See online shop offline</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
