added keywords in meta

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
+      name="keywords"
+      content="Shoffline, shoffline.in, Offline, SHOFFLINE, offline, shopping, near by, store, online, best price, cheap price"
+    />
+    <meta
       name="description"
       content="At shoffline, with the aim of see online shop offline, you can search any
     product at a walking distance, which will reduce your in-store shopping
